# ideapad

./: Cargo.toml  README.md
.cargo/: config
src/: acpi_call.rs  battery.rs  battery_conservation.rs  battery_conservation_mode.rs  context.rs  fallible_drop_strategy.rs  lib.rs  macros.rs  prelude.rs  profile.rs  rapid_charge.rs  system_performance.rs  system_performance_mode.rs
src/battery/: enable.rs  mod.rs  private.rs
src/battery_conservation/: enable.rs  mod.rs
