[package]
name = "ideapad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.9.0"
parking_lot = "0.11.2"
serde = { version = "1.0.132", optional = true, features = ["derive"] }
smbios-lib = "0.8.0"
tap = "1.0.1"
thiserror = "1.0.30"

[features]
battery_conservation = []
rapid_charge = []
system_performance = []
fallible_drop_strategy = []
ideapad_15iil05 = []
ideapad_amd = []
log_to_stderr = []
log_to_stdout = []
log_to_writer = ["log_to_stderr", "log_to_stdout"]
panic_on_error = []
ignore_error = []

[dev-dependencies]
serial_test = "0.5.1"
