[package]
name = "ideapad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.9.0"
parking_lot = "0.11.2"
serde = { version = "1.0.132", optional = true, features = ["derive"] }
smbios-lib = "0.8.0"
tap = "1.0.1"
thiserror = "1.0.30"

[features]
default = ["core", "profiles", "macros", "fallible_drop_strategies"]

# core
core = ["battery_conservation", "rapid_charge", "system_performance"]
battery_conservation = []
rapid_charge = []
system_performance = []

# profiles
profiles = ["ideapad_15iil05", "ideapad_amd"]
ideapad_15iil05 = []
ideapad_amd = []

# macros
macros = ["borrowed_cow_array", "borrowed_cow_vec"]
borrowed_cow_array = []
borrowed_cow_vec = []

# fallible_drop_strategies
fallible_drop_strategies = ["log_to_writer_on_error", "panic_on_error", "exit_on_error", "do_nothing_on_error"]
log_to_writer_on_error = []
panic_on_error = []
exit_on_error = []
do_nothing_on_error = []

[dev-dependencies]
serial_test = "0.5.1"
